<resources>
    <string name="app_name">NutriScan</string>
    <string name="title_app">NutriScan</string>
    <string name="mulai">Mulai</string>
    <string name="headline_firstpage">Foto Makanan Anda,\nKetahui Nutrisi Seketika</string>
    <string name="scan_nutrisi">Scan Nutrisi</string>
    <string name="Riwayat">Riwayat</string>
    <string name="pengaturan">Pengaturan</string>
    <string name="content_desc">Nasi yang dicampur dengan bumbu, telur, dan sayuran, sering disajikan dengan acar dan kerupuk</string>
    <string name="content_title">Nasi Goreng</string>
    <string name="lemak">Lemak</string>
    <string name="kalori">Kalori</string>
    <string name="protein">Protein</string>
    <string name="karbo">Karbo</string>
    <string name="bahan_bahan">Bahan-Bahan</string>
    <string name="galeri_makanan">Galeri Makanan</string>
    <string name="title_activity_riwayat">RiwayatActivity</string>

    <string name="title_activity_maps">MapsActivity</string>

    <string name="feedback">Beri Masukan</string>
    <string name="about_nutriscan">Tentang NutriScan</string>
    <string name="tanggal">Tanggal</string>
    <string name="name">Name</string>
    <string name="desc">Desc</string>
    <string name="hasil_riwayat">Hasil Riwayat</string>
    <string name="riwayat">Riwayat</string>
    <string name="pilih_tanggal">Pilih Tanggal</string>
    <string name="data_belum_tersedia">Data belum tersedia</string>
    <string name="info_nutriscan">NutriScan membantu Anda menganalisis dan memahami kandungan nutrisi dari berbagai makanan berdasarkan prediksi machine learning yang canggih.</string>
    <string name="tutup">Tutup</string>
    <string name="team">C241-PS121</string>
    <string name="abstrak">Abstrak</string>
    <string name="deskripsi_abstrak">Dalam proyek aplikasi ini, kami sedang mengembangkan aplikasi untuk mendeteksi nutrisi dalam makanan. Dengan aplikasi tersebut, pengguna akan mengetahui nutrisi apa saja yang didapat saat mengonsumsi makanannya. Aplikasi yang kami kembangkan menggunakan deteksi pada kamera yang berfungsi untuk mengenali makanan dan menganalisa nutrisi apa saja yang ada pada makanan tersebut. Setelah pengguna mengambil gambar menggunakan kamera, maka akan diberikan detail mengenai nutrisi pada makanan tersebut. Untuk merumuskan masalah, masih sedikit alat yang tersedia untuk mengidentifikasi zat gizi dalam makanan yang mudah digunakan atau dibawa-bawa. Dan untuk pertanyaan penelitian kami berfokus pada deteksi nutrisi untuk menghasilkan algoritma yang akurat dan menyajikan informasi nutrisi apa saja yang diperoleh. Dengan adanya aplikasi ini diharapkan dapat memudahkan pengguna dalam memenuhi kebutuhan nutrisinya dan juga memudahkan pengguna dalam memilih makanan yang sehat dan tidak sehat. Informasi latar belakang ini berisi tentang pentingnya memiliki tubuh yang sehat yang bersumber dari komposisi makanan yang sehat dan banyak nutrisi untuk mencapai kesejahteraan secara keseluruhan. Tim kami memilih tema ini karena masih banyak masyarakat yang belum mengetahui tentang kesehatan fisiknya dan untuk mengatasi meningkatnya kekhawatiran terhadap penyakit gizi.</string>
    <string name="confidence_kurang">Bukan Makanan / Data di luar dataset</string>
</resources>