<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DashboardActivity">

    <ImageView
        android:id="@+id/food_dashboard"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:src="@drawable/fooddashboard"
        android:layout_alignParentTop="true"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <ImageView
            android:id="@+id/weatherIcon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/baseline_wb_sunny_24"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true" />

        <TextView
            android:id="@+id/greetingTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/weatherIcon"
            android:layout_centerVertical="true"
            android:fontFamily="@font/latebold"
            android:layout_marginStart="8dp"
            android:text="Good Morning"
            android:textSize="18sp"
            android:textColor="@color/white" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/title_head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:background="@color/black"
        android:layout_below="@+id/food_dashboard">

        <TextView
            android:id="@+id/myTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:textColor="@color/orange"
            android:layout_marginLeft="20dp"
            android:fontFamily="@font/latebold"
            android:text="@string/app_name"
            android:textSize="30dp" />

        <ImageView
            android:id="@+id/icon_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@drawable/iconlayout" />

    </RelativeLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/title_head"
        android:columnCount="2"
        android:rowCount="2"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_gravity="center">

        <FrameLayout
            android:layout_width="13dp"
            android:layout_height="13dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="5dp">
            <androidx.cardview.widget.CardView
                android:id="@+id/btn_scan"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:contentPadding="10dp"
                app:cardCornerRadius="10dp"
                app:cardBackgroundColor="@color/orange"
                android:layout_gravity="fill">
                <ImageButton
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:src="@drawable/scan"
                    android:backgroundTint="@android:color/transparent"
                    android:layout_gravity="center|top"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="false"
                    android:focusable="false"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:gravity="center|bottom"
                    android:fontFamily="@font/latoreguler"
                    android:textColor="@color/white"
                    android:text="@string/scan_nutrisi" />
            </androidx.cardview.widget.CardView>
        </FrameLayout>

        <FrameLayout
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="5dp">
            <androidx.cardview.widget.CardView
                android:id="@+id/btn_riwayat"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:contentPadding="10dp"
                app:cardCornerRadius="10dp"
                app:cardBackgroundColor="@color/orange"
                android:layout_gravity="fill">
                <ImageButton
                    android:layout_width="60dp"
                    android:layout_height="70dp"
                    android:src="@drawable/riwayat_scan"
                    android:backgroundTint="@android:color/transparent"
                    android:layout_gravity="center|top"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="false"
                    android:focusable="false"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center|bottom"
                    android:fontFamily="@font/latoreguler"
                    android:textColor="@color/white"
                    android:text="@string/Riwayat" />
            </androidx.cardview.widget.CardView>
        </FrameLayout>

        <FrameLayout
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="5dp">
            <androidx.cardview.widget.CardView
                android:id="@+id/btn"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:contentPadding="10dp"
                app:cardCornerRadius="10dp"
                app:cardBackgroundColor="@color/orange"
                android:layout_gravity="fill">
                <ImageButton
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:src="@drawable/galerimakanan"
                    android:backgroundTint="@android:color/transparent"
                    android:layout_gravity="center|top"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="false"
                    android:focusable="false"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:gravity="center|bottom"
                    android:fontFamily="@font/latoreguler"
                    android:textColor="@color/white"
                    android:text="@string/galeri_makanan" />
            </androidx.cardview.widget.CardView>
        </FrameLayout>

        <FrameLayout
            android:layout_width="13dp"
            android:layout_height="13dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="5dp">
            <androidx.cardview.widget.CardView
                android:id="@+id/btn_setting"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:contentPadding="10dp"
                app:cardCornerRadius="10dp"
                app:cardBackgroundColor="@color/orange"
                android:layout_gravity="fill">
                <ImageButton
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:src="@drawable/pengaturan"
                    android:backgroundTint="@android:color/transparent"
                    android:layout_gravity="center|top"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="false"
                    android:focusable="false"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:gravity="center|bottom"
                    android:fontFamily="@font/latoreguler"
                    android:textColor="@color/white"
                    android:text="@string/pengaturan" />
            </androidx.cardview.widget.CardView>
        </FrameLayout>
    </GridLayout>

</RelativeLayout>