<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".riwayat.RiwayatActivity">
    <TextView
        android:id="@+id/title_riwayat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="H"
        android:textSize="30sp"
        />

    <RelativeLayout
        android:id="@+id/relativegrid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_riwayat">
            <GridLayout
                android:id="@+id/grid_nutrisi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:columnCount="4"
                android:alignmentMode="alignMargins"

                android:useDefaultMargins="true">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:orientation="vertical"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    android:gravity="center">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/karbohidrat"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        app:cardCornerRadius="10dp"
                        android:background="@drawable/stroke_detairesult"
                        app:cardBackgroundColor="@color/white"
                        android:clickable="true"
                        android:focusable="true"
                        android:foreground="?attr/selectableItemBackground"
                        app:contentPadding="2dp"
                        >

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:gravity="center">

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_weight="1"
                                android:layout_marginTop="7dp"
                                android:layout_marginBottom="7dp"
                                android:src="@drawable/wheat"
                                />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="8dp"
                                android:layout_marginBottom="6dp"
                                android:gravity="center"
                                android:text="21.06g"
                                android:fontFamily="@font/latoreguler"
                                android:textSize="13sp"
                                android:textColor="@android:color/black"/>
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/karbo"
                        android:fontFamily="@font/latolight"
                        android:textSize="12sp"
                        android:textColor="@android:color/black"
                        android:layout_marginTop="8dp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:orientation="vertical"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    android:gravity="center">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/protein"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        app:cardCornerRadius="10dp"
                        android:background="@drawable/stroke_detairesult"
                        app:cardBackgroundColor="@color/white"
                        android:clickable="true"
                        android:focusable="true"
                        android:foreground="?attr/selectableItemBackground"
                        app:contentPadding="2dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:gravity="center">

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_weight="1"
                                android:layout_marginTop="7dp"
                                android:layout_marginBottom="7dp"
                                android:src="@drawable/protein"
                                />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="8dp"
                                android:gravity="center"
                                android:text="21.06g"
                                android:fontFamily="@font/latoreguler"
                                android:layout_marginBottom="6dp"
                                android:textSize="13sp"
                                android:textColor="@android:color/black"/>
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/protein"
                        android:fontFamily="@font/latolight"
                        android:textSize="12sp"
                        android:textColor="@android:color/black"
                        android:layout_marginTop="8dp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:orientation="vertical"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    android:gravity="center">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/kalori"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        app:cardCornerRadius="10dp"
                        android:background="@drawable/stroke_detairesult"
                        app:cardBackgroundColor="@color/white"
                        android:clickable="true"
                        android:focusable="true"
                        android:foreground="?attr/selectableItemBackground"
                        app:contentPadding="2dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:gravity="center">

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_weight="1"
                                android:layout_marginTop="7dp"
                                android:layout_marginBottom="7dp"
                                android:src="@drawable/kalori"
                                />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="8dp"
                                android:gravity="center"
                                android:text="21.06g"
                                android:fontFamily="@font/latoreguler"
                                android:textSize="13sp"
                                android:layout_marginBottom="6dp"
                                android:textColor="@android:color/black"/>
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/kalori"
                        android:fontFamily="@font/latolight"
                        android:textSize="12sp"
                        android:textColor="@android:color/black"
                        android:layout_marginTop="8dp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:orientation="vertical"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    android:gravity="center">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/lemak"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        app:cardCornerRadius="10dp"
                        android:background="@drawable/stroke_detairesult"
                        app:cardBackgroundColor="@color/white"
                        android:clickable="true"
                        android:focusable="true"
                        android:foreground="?attr/selectableItemBackground"
                        app:contentPadding="2dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:gravity="center">

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_weight="1"
                                android:layout_marginTop="7dp"
                                android:layout_marginBottom="7dp"
                                android:src="@drawable/lemak"
                                />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="8dp"
                                android:gravity="center"
                                android:fontFamily="@font/latoreguler"
                                android:textSize="13sp"
                                android:layout_marginBottom="6dp"
                                android:text="21.06g"
                                android:textColor="@android:color/black"/>
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/lemak"
                        android:fontFamily="@font/latolight"
                        android:textSize="12sp"
                        android:textColor="@android:color/black"
                        android:layout_marginTop="8dp"/>
                </LinearLayout>
            </GridLayout>
    </RelativeLayout>
    <TextView
        android:id="@+id/title_hasilriwayat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Hasil Riwayat"
        android:layout_below="@id/relativegrid"
        android:textSize="30sp"
        />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <EditText
            android:id="@+id/editTextDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            app:layout_constraintEnd_toEndOf="parent"
            android:focusable="false"
            android:hint="Select Date" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/title_hasilriwayat"
        />

</RelativeLayout>